@@ -466,6 +466,9 @@ Reload current image. Useful for webcams.
 .B v, V
 Toggle fullscreen.
 .TP 5
+.B m, M
+Show popup menu.
+.TP 5
 .B w, W
 Size window to current image size.
 .TP 5
@@ -487,6 +490,9 @@ Goto first slide
 .TP 5
 .B <END>
 Goto last slide
+.TP 5
+.B <ESCAPE>
+Quit the slideshow
 .TP 5
 .B +, =
 Increase reload delay
