@@ -1001,6 +1001,7 @@ show_usage(void)
            " n, N, <SPACE>, <RIGHT>     Goto next slide\n"
            " r, R                       Reload image (good for webcams)\n"
            " v, V                       Toggle fullscreen\n"
+           " m, M                       Show popup menu\n"
            " w, W                       Size window to current image dimensions\n"
            " h, H                       Pause the slideshow (only useful when using\n"
            " s, S                       Save current image to unique filename\n"
@@ -1009,6 +1010,7 @@ show_usage(void)
            " <, >                       In place editing, rotate 90 degrees right/left\n"
            " <HOME>                     Goto first slide\n"
            " <END>                      Goto last slide\n"
+           " <ESCAPE>                   Quit the slideshow\n"
            " +, =                       Increase reload delay\n"
            " -, _                       Decrease reload delay\n"
            " <DELETE>                   Remove the currently viewed file from the filelist\n"
